[package]
name = "mqttd"
version = "0.1.0"
authors = ["Mike Yagley <myagley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
futures-util-preview = "0.3.0-alpha.19"
tokio = { version = "0.2.0-alpha.6" }
tokio-net = { version = "0.2.0-alpha.6", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = "0.1"

mqtt-broker = { path = "../mqtt-broker" }
